force-app/main/default/objects/Booking__c/fields/Assigned_Engineer__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Engineer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned Engineer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Bookings</relationshipName>
    <type>Lookup</type>
</CustomField>