force-app/main/default/objects/Booking__c/fields/Booking_End__c.field-meta.xml
<CustomField>
    <fullName>Booking_End__c</fullName>
    <label>Booking End</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>