force-app/main/default/objects/Booking__c/fields/Booking_Start__c.field-meta.xml
<CustomField>
    <fullName>Booking_Start__c</fullName>
    <label>Booking Start</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>