force-app/main/default/objects/Booking__c/validationRules/Validate_Booking_Time.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Booking_Time</fullName>
    <active>true</active>
    <errorConditionFormula>Booking_End__c &lt;= Booking_Start__c</errorConditionFormula>
    <errorDisplayField>Booking_End__c</errorDisplayField>
    <errorMessage>Booking End must be later than Booking Start.</errorMessage>
</ValidationRule>